# momentum

./: .gitignore  AGENTS.md  GOAL.md  Package.resolved  Package.swift  README.md  executor-reviewer-pair-programming.md
kg-canonical/: AGENTS.md  GOAL.md  README.md  pyproject.toml
kg-canonical/dashboard/: index.html
kg-canonical/docs/: candidate-assessment-fitgraph-synthesis-plan.md
kg-canonical/docs/autonomous-workflow/: 02-role-contracts.md  05-devops-and-session-ops.md  08-scaffold-adoption-matrix.md  09-fitgraph-autonomous-plan.md  README.md
kg-canonical/docs/briefs/: 002-m1-resolver-seed-graph.md  004-m3-alternatives-workout-candidates.md  005-m4-member-context-fact-cards.md  007-eod-completion-testing.md  012-eod-prd-acceptance-audit.md  016-test-quality-hardening.md  017-assignment-conformance-closeout.md
kg-canonical/docs/manager-log/: 002-agent-thread-handoff.md  (+35 more)
kg-canonical/graph/: exercise_kg.seed.json  member_kg.seed.json  ontology-lock.json  safety_rules.seed.json
kg-canonical/kg/: assessment_import.py  constraints.py  member_retrieval.py  provenance.py  resolver.py  safety.py  workout_generator.py
kg-canonical/scripts/: audit_autonomous_workflow.sh  audit_codex_pair_state.mjs  plan_next_resume_brief.sh  run_codex_pair_cycle.sh  start_codex_goal_loop.sh  stop_codex_goal_loop.sh  validate_resume_brief.sh
kg-canonical/tests/: test_assessment_import.py  test_copilot.py  test_dashboard_browser.py  test_dashboard_contract.py  test_imports.py  test_resolver.py  test_safety.py  test_validation.py  test_workflow_scripts.py  test_workout_generator.py
(+696 files in other folders)
