[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fitgraph-kg"
version = "0.1.0"
description = "Deterministic FitGraph knowledge graph walking skeleton."
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["kg*"]
exclude = ["graph*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
